--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .header {
-  background: yellowgreen;
+  background: rgb(68, 111, 146);
   margin-top: 0px;
   padding: 10px 20px;
   display: flex;
