--- a/src/components/ad/ad.css
+++ b/src/components/ad/ad.css
@@ -1,12 +1,13 @@
 .ad {
-  border: 1px solid black;
+  border: 1px solid aliceblue;
   border-radius: 10px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: left;
   gap: 20px;
   margin: 10px;
   padding: 10px;
-}
-.playNowButton {
-  cursor: pointer;
+  background: rgb(68, 111, 146);
+  max-width: 300px;
+  align-items: baseline;
 }
