--- a/src/components/shopItem/shopItem.css
+++ b/src/components/shopItem/shopItem.css
@@ -1,9 +1,14 @@
 .shopItem {
+  border: 1px solid aliceblue;
+  border-radius: 10px;
   display: flex;
-  border: 1px solid black;
+  flex-wrap: wrap;
+  justify-content: left;
+  gap: 20px;
   margin: 10px;
   padding: 10px;
-  border-radius: 10px;
-  align-items: center;
-  gap: 20px;
+  background: rgb(68, 111, 146);
+  max-width: 200px;
+  align-items: baseline;
+  align-items: baseline;
 }
