--- a/src/components/shopItem/shopItem.css
+++ b/src/components/shopItem/shopItem.css
@@ -2,13 +2,14 @@
   border: 1px solid aliceblue;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: left;
   gap: 20px;
   margin: 10px;
   padding: 10px;
   background: rgb(68, 111, 146);
-  max-width: 200px;
+  min-width: 300px;
   align-items: baseline;
   align-items: baseline;
 }
