--- a/src/styles/ads.css
+++ b/src/styles/ads.css
@@ -2,3 +2,8 @@
   display: flex;
   flex-wrap: wrap;
 }
+.buttonsContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 50px;
+}
